# CW_5_vacancies_database

./: README.md  database.ini  main.py  pyproject.toml  queries.sql
src/: DBManager.py  config.py  hh_class.py  utils.py
